# biomsharp

./: .gitignore  LICENSE  README.md  pyproject.toml
biomsharp/: test_france.py  test_global.py
biomsharp/archs/: biosharp_arch.py  reuse_arch.py  sgnet_arch.py
biomsharp/data/: data_util.py  france_biomass_dataset.py  paired_biomass_dataset.py  transforms.py
biomsharp/data/meta_info/: meta_info_climatic-region-arid-25m_GT.txt  meta_info_climatic-region-boreal-25m_GT.txt  meta_info_climatic-region-equatorial-25m_GT.txt  meta_info_climatic-region-polar-25m_GT.txt  meta_info_climatic-region-polar_new-25m_GT.txt  (+2 more)
biomsharp/metrics/: __init__.py
biomsharp/models/: bicubic_model.py  naive_model.py  reuse_model.py  sgnet_model.py
biomsharp/utils/: img_util.py
biosharp/: __init__.py  test.py  test_france.py  test_global.py  train.py
biosharp/archs/: __init__.py  bicubic_arch.py  biosharp_arch.py  sgnet_arch.py
biosharp/data/: __init__.py  france_biomass_dataset.py  global_biomass_dataset.py  paired_biomass_dataset.py  transforms.py  triplet_biomass_dataset.py  triplet_image_dataset.py
biosharp/losses/: __init__.py  losses.py
biosharp/metrics/: __init__.py  mae_mse_rmse.py  psnr_ssim_mae_mse_rmse.py
biosharp/models/: __init__.py  bicubic_model.py  biomsharp_model.py  biosharp_model.py  hat_biomass_model.py  naive_model.py  reuse_model.py  sgnet_model.py
biosharp/utils/: __init__.py  img_util.py
data_preparation/: download_aoi_landsat5_gee.js  download_aoi_sentinel2_gee.js  extract_subimages.py
options/test/: test_france_options_biomsharp.yml  test_france_options_biosharp.yml  test_france_options_sgnet.yml  test_global_options_biomsharp.yml  test_global_options_biomsharp_climatic_G1.yml  test_global_options_biomsharp_climatic_l5.yml  test_global_options_biomsharp_climatic_s2.yml  test_global_options_biosharp.yml  test_global_options_biosharp_climatic_G1.yml  test_global_options_biosharp_climatic_l5.yml  test_global_options_biosharp_climatic_s2.yml  test_options_bicubic.yml  test_options_biomsharp.yml  test_options_biosharp.yml  test_options_hat.yml  test_options_reuse_landsat.yml  test_options_reuse_sentinel.yml  test_options_sgnet.yml
options/train/: train_BIOSHARP_SRx4_from_scratch.yml  train_climatic_region_options_biomsharp_landsat.yml  train_climatic_region_options_biomsharp_sentinel.yml  train_climatic_region_options_biosharp_landsat.yml  train_climatic_region_options_biosharp_sentinel.yml  train_global_mixte_options_biomsharp_landsat.yml  train_global_mixte_options_biosharp_landsat.yml  train_global_options_biomsharp_landsat.yml  train_global_options_biosharp_landsat.yml  train_options.yml  train_options_biomsharp_landsat.yml  train_options_biomsharp_sentinel.yml  train_options_biosharp_landsat.yml  train_options_biosharp_sentinel.yml  train_options_hat.yml  train_options_reuse_landsat.yml  train_options_reuse_sentinel.yml  train_options_sgnet_landsat.yml  train_options_sgnet_sentinel.yml
(+1 files in other folders)
