[project]
name = "biosharp"
description = ""
version = "0.0.1"
authors = [
    { name = "Laia Albors Zumel", email = "laia.albors@upc.edu" }
]
readme = "README.md"
dependencies = [
    "torch==2.2.1",
    "torchvision",
    "einops",
    "basicsr==1.3.4.9",
    "HAT @ git+https://github.com/XPixelGroup/HAT.git"
]

[project.optional-dependencies]
dev = [
    "jupyter"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]  # This specifies the directory to look for tests
